fix: enhance required field hint visibility and styling in add-task form

--- a/member/css/add-task-responsive.css
+++ b/member/css/add-task-responsive.css
@@ -77,8 +77,44 @@
 }
 }
 
+/* @media (max-width: 735px) {
+  .add-task__footer .add-task__required-hint {
+    display: none;
+  }
+
+  .add-task__column--right .subtask-list::after {
+    content: "* This field is required";
+    display: block;
+    margin-top: 0px;
+    font-size: 14px;
+    line-height: 1.2;
+    color: var(--color-menu-bg);
+  }
+} */
+
+@media (min-width: 736px) {
+  .add-task__required-hint--mobile {
+    display: none;
+  }
+}
 
 @media(max-width: 735px) {
+
+    .add-task__footer .add-task__required-hint {
+    display: none;
+  }
+  .add-task__required-hint--mobile {
+    display: block;
+    margin-top: -20px;
+    font-size: 14px;
+    line-height: 1.2;
+  }
+  .add-task__required-hint--mobile .add-task__required-star {
+    color: #ff3d00;
+    font-weight: 700;
+    margin-right: 4px;
+  }
+
   .button.add-task__priority-button {
     flex-direction: row;
     height: 45px;
